--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,6 +43,8 @@
         "list": "cpp",
         "unordered_map": "cpp",
         "fstream": "cpp",
-        "iomanip": "cpp"
+        "iomanip": "cpp",
+        "*.ipp": "cpp",
+        "algorithm": "cpp"
     },
 }
